@@ -3,6 +3,7 @@
 - postpone indefinitely/stop scheduling/postpone 100 years/remove from learning process?
 - replace setup.py. Install in Windows system does not find icons.
 - translations through crowdin?
+- activate prefill tag behaviour by default
 
 Android:
 
