@@ -1,6 +1,6 @@
 import sys
 
-version = "2.10"
+version = "2.10.1"
 
 if __name__ == "__main__":
     sys.stdout.write(version)
